# Sentri

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SHIP.md  adoption-guide.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_alert_type.md
.github/workflows/: ci.yml
agents/: agent0_profiler.md  agent1_scout.md  agent2_auditor.md  proactive_agent.md  rca_agent.md  sql_tuning_agent.md  storage_agent.md
alerts/: README.md  archive_dest_full.md  cpu_high.md  high_undo_usage.md  long_running_sql.md  temp_full.md
brain/: autonomy_levels.md  memory_rules.md  routing_rules.md  rules.md  violation_protocol.md
checks/: stale_stats.md
config/: sentri.yaml.example
docker/: .dockerignore  Dockerfile  demo-config.yaml  docker-compose.yml
docker/oracle-init/: 01_setup_demo.sql
docs/: adding-alerts.md  architecture.md  configuration.md  faq.md  getting-started.md  l2-l3-dba-adoption-guide.md  l3-dba-alert-control-playbook.md  safety-model.md
environments/: README.md  prod_db_07.md
scripts/: test_all_versions_fetch.py  test_all_versions_html.py  test_e2e_12c.py  test_html_deep.py  test_html_structure.py  test_long_term_memory.py  test_web_fetch_manual.py
src/sentri/: __init__.py  __main__.py  logging_config.py
tests/: conftest.py
tests/e2e/: README.md  run_e2e_tests.py  test_approval_flow.py  verify_oracle.py
tests/integration/: conftest.py  test_00_smoke.py  test_01_tablespace_full.py  test_02_temp_full.py  test_03_archive_dest_full.py  test_04_high_undo_usage.py  test_05_long_running_sql.py  test_06_cpu_high.py  test_07_session_blocker.py  test_08_stale_stats.py  (+2 more)
workflows/: approval_workflow.md
(+178 files in other folders)
