[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentri-dba"
version = "5.2.0"
description = "AI-Powered L3 DBA Agent System - Autonomous database issue detection and resolution"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Sahil" },
]
keywords = ["dba", "oracle", "automation", "agents", "database", "sentri"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Topic :: Database :: Database Engines/Servers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "oracledb>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
llm = [
    "anthropic>=0.39",
    "openai>=1.50",
    "google-generativeai>=0.8",
]

[project.scripts]
sentri = "sentri.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sentri"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/e2e/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["sentri"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
